modules/gdscript/tests/scripts/analyzer/errors/struct_invalid_constructor_args.gd
struct MyStruct:
	var a: int

func test():
	var my_struct: MyStruct = MyStruct("hello")
